# rusty-chess

./: Cargo.toml  EXECUTIVE_SUMMARY.md  LOGIC_ERRORS_REPORT.md  README.md  README_LOGIC_ANALYSIS.md  ave  db.sqlite3
.github/workflows/: rust.yml
chess/: settings.py  urls.py
engine/: Cargo.toml  design.drawio
engine/src/: bitboard.rs  board.rs  color.rs  coordinates.rs  error.rs  evaluate.rs  file.rs  genmove.rs  lib.rs  main.rs  move_generation.rs  pieces.rs  rank.rs  search.rs
engine/src/tests/: best_move.rs  checkmate_test.rs  evaluate_move.rs  logic_error_tests.rs  move_gen_test.rs
rusty/: urls.py  views.py
rusty/templates/: index.html
src/: bitboard.rs  board.rs  color.rs  data.rs  engine.rs  error.rs  file.rs  genmove.rs  lib.rs  main.rs  move_generation.rs  pieces.rs  rank.rs  structures.rs
src/tests/: move_gen_test.rs
