[package]
name = "engine"
version = "0.1.0"
edition = "2021"


[dependencies]
arrayvec = "0.7.2"
nodrop = "0.1.14"
failure = "0.1.6"
thiserror = "1.0"

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

# always optimize build script, because it takes a long time to run unoptimized
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[build-dependencies]
rand = { version = "0.7.2", default_features = false, features = ["small_rng"] }
failure = "0.1.6"
